middleware-https.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: force-https
  namespace: portainer
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Proto: "https"
