portainer-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portainer-ingress
  namespace: portainer
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: portainer-force-https@kubernetescrd
    traefik.ingress.kubernetes.io/router.middlewares: traefik-error-pages-middleware@kubernetescrd    
spec:
  ingressClassName: traefik
  rules:
  - host: portainer.<<seu-dominio>> # <--- SUBSTITUA PELO SEU DOMÍNIO
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: portainer
            port:
              number: 9000
